[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "OAuth client for Rust"
documentation = "https://gifnksm.github.io/oauth-client-rs"
license = "MIT OR Apache-2.0"
name = "oauth-client"
readme = "README.md"
repository = "https://github.com/gifnksm/oauth-client-rs"
version = "0.3.2"

[dependencies]
base64 = "0.9.0"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4.1"
rand = "0.4.2"
reqwest = "0.8.5"
time = "0.1.39"
ring = "0.12.1"
url = "1.7.0"
