[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "OAuth client for Rust"
license = "MIT OR Apache-2.0"
name = "oauth-client"
readme = "README.md"
repository = "https://github.com/gifnksm/oauth-client-rs"
version = "0.3.2"

[dependencies]
base64 = "0.10.1"
failure = "0.1.5"
failure_derive = "0.1.5"
lazy_static = "1.3.0"
log = "0.4.6"
rand = "0.6.5"
ring = "0.14.6"
reqwest = "0.9.10"
time = "0.1.42"
url = "1.7.2"
mime = "0.3.13"
